// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Portal/PageTitle Default smoke-test 1`] = `
<div class="m-page-title m-page-title--reduced">
  <div class="m-page-title__inner">
    <h1 class="m-page-title__title">
      <span>
        the title
      </span>
    </h1>
    <div class="s-cms-content">
      <span>
        the title
      </span>
    </div>
  </div>
</div>
`;

exports[`components/Portal/PageTitle WithoutSubtitle smoke-test 1`] = `
<div class="m-page-title m-page-title--reduced">
  <div class="m-page-title__inner">
    <h1 class="m-page-title__title">
      <span>
        the title
      </span>
    </h1>
  </div>
</div>
`;
